# Yoda-LLM

./: .gitignore  .pre-commit-config.yaml  README.md  cli.py  main.py  main_ui.py  pyproject.toml  ruff.toml
controller/: __init__.py  yoda_controller.py
model/: __init__.py  base_conversation.py  yoda_conversation.py
model/ui/: __init__.py  yoda_model.py
util/: prompt_util.py
view/: __init__.py  yoda_view.py
