[project]
name = "yoda-llm"
version = "0.1.0"
description = "Yoda LLM UI and CLI application"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.1",
    "numpy>=2.3.2",
    "torch>=2.8.0",
    "transformers>=4.56.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
    "pre-commit>=4.0.0",
]